tdf#104936 RTF export: implement ZOrder of TextFrames / shapes

This used to work by accident for the particular textbox, but broke with
commit 38f2b8b3b16aab19a2564ec699d253d3dccecc3c (tdf#88811
SwXText::convertToTextFrame: handle shapes anchored to us, 2015-02-03),
so write ZOrder explicitly, like other filters already do.

Change-Id: Ie8f11f4ec77707fb5aec7a597544d589a99bf6ca