sw/qa/extras/globalfilter/globalfilter.cxx
@@ -283,6 +283,29 @@ void Test::testImageWithSpecialID()
     }
 }
 
+/// Gives the first embedded or linked image in a document.
+uno::Reference<drawing::XShape> lcl_getShape(const uno::Reference<lang::XComponent>& xComponent, bool bEmbedded)
+{
+    uno::Reference<drawing::XShape> xRet;
+
+    uno::Reference<drawing::XDrawPageSupplier> xDrawPageSupplier(xComponent, uno::UNO_QUERY);
+    uno::Reference<drawing::XDrawPage> xDrawPage = xDrawPageSupplier->getDrawPage();
+    for (sal_Int32 i = 0; i < xDrawPage->getCount(); ++i)
+    {
+        uno::Reference<beans::XPropertySet> xShape(xDrawPage->getByIndex(i), uno::UNO_QUERY);
+        OUString sURL;
+        xShape->getPropertyValue("GraphicURL") >>= sURL;
+        // Linked image: working starts with file://, broken is e.g. 'vnd.sun.star.GraphicObject:3000000000000000000000000000000000000000'.
+        if ((sURL.startsWith("file://") || sURL.endsWith("0000000000000000")) != bEmbedded)
+        {
+            xRet.set(xShape, uno::UNO_QUERY);
+            break;
+        }
+    }
+
+    return xRet;
+}
+
 void Test::testGraphicShape()
 {
     // There are two kind of images in Writer: 1) Writer specific handled by SwGrfNode and
@@ -326,7 +349,7 @@ void Test::testGraphicShape()
         const OString sFailedMessage = OString("Failed on filter: ") + aFilterNames[nFilter];
         CPPUNIT_ASSERT_EQUAL_MESSAGE(sFailedMessage.getStr(), static_cast<sal_Int32>(2), xDraws->getCount());
 
-        uno::Reference<drawing::XShape> xImage = getShape(1);
+        uno::Reference<drawing::XShape> xImage = lcl_getShape(mxComponent, true);
         uno::Reference< beans::XPropertySet > XPropSet( xImage, uno::UNO_QUERY_THROW );
         // First image is embedded
         // Check URL
@@ -350,7 +373,7 @@ void Test::testGraphicShape()
             return;
 
         // Second image is a linked one
-        xImage = getShape(2);
+        xImage = lcl_getShape(mxComponent, false);
         XPropSet.set( xImage, uno::UNO_QUERY_THROW );
         // Check URL
         {
